selfhost/test/typechecker/identifier_error_unknown_ident.out
Error at %FILE_NAME%:1:2
Unknown variable 'bogus'
  |  -bogus
      ^
No variable with that name is visible in current scope
